syntax = "proto3";

package sca;

option go_package = "mosn.io/mosn/pkg/filter/stream/sca";

message ResourceEvaluator {
  string server = 1;
  string token = 2;
  string name = 3;
  repeated string inherit_header = 4;
}

message ResourceGlobalConfig {
  ResourceEvaluator evaluator = 1;
  bool push_enabled = 2;
}

message ResourceConfig {
  string type = 1;
  map<string, string> evaluator_extra_args = 2;
}
